--- a/index.html
+++ b/index.html
@@ -69,8 +69,70 @@
       <p id = "StatsTextExtra">The update with the highest aggregate score is <a id="AggregateLink" class="UpdateLink">$UPDATENAME$</a> with a score of <span class="value">$VALUE1$</span>. This is because I made <span class="value">$VALUE2$</span> total changes over the course of <span class="value">$VALUE3$</span> days.</p>
     </div>
   </div>
+  
   <hr>
+  
   <div id="updates">
+    <div id="U67">
+      <div class="header">
+        <h2>Update 67: Slice of Life</h2>
+        <p>Mar 27th, 2024</p>
+      </div>
+      <div class="features">
+      </div>
+      <div class="balance">
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>Improved Intensify items now properly reduce the cost of Intensified spells.</li>
+          <li>Tumble no longer erroneously breaks stealth and invisibility.</li>
+          <li>The single target Shield Throw now needs a shield to throw.</li>
+          <li>Draconic Incarnation's Scales of the Dragon now properly scales with level.</li>
+          <li>Curative Admixtures now properly trigger the Exalted Angel Destiny Mantle.</li>
+          <li>Consecrated Sparks now work properly when using Wrathful Form.</li>
+          <li>Ascendance now properly Turns Everything while using using any Cleric Domain that modifies your turnable targets.</li>
+          <li>Grandmaster of Flowers' Drifting Lotus damage has been fixed along with some typos.</li>
+          <li>Legendary Dreadnought's Dire Charge now properly states how its DC is calculated.</li>
+          <li>Magus of the Eclipse's Zero Degree Comet and Moon's Shadow now have visible saving throws.</li>
+          <li>Magus of the Eclipse's Dark Light of the Moon no longer damages undead.</li>
+          <li>Magus of the Eclipse's Grand Summoner now works properly and has a better icon in your hireling or summoned creature's buff bar.</li>
+          <li>Magus of the Eclipse's Share the Light now works correctly.</li>
+          <li>Some Magus of the Eclipse benefits no longer improperly stick in your buff bar.</li>
+          <li>Various typos have been corrected in Shiradi Champion, and various buffs will no longer improperly stick in your buff bar.</li>
+          <li>Vistani Knife Fighter's Fan of Knives now scales with the higher of Melee or Ranged Power as intended, and no longer scales with Spell Power.</li>
+          <li>An ability DC typo has been corrected in Artificer's Thunder Shock weapon.</li>
+          <li>Shield Mastery Specialty now grants its proper +10 Physical Resistance Rating for small shields and bucklers.</li>
+          <li>Greater Shield Mastery now grants its proper +10 Physical Resistance Rating for small shields and bucklers.</li>
+          <li>Nimble Fingers' sneak attack dice no longer drops on death.</li>
+          <li>Knight of the Chalice's Divine Sacrifice (Ranged) now has its proper tooltip between ranks.</li>
+          <li>Throwing weapons now correctly calculate their to-hit if using alternate stats like Intelligence or Charisma.</li>
+          <li>Legendary Greensteel accessory healing effects no longer continuously spam the combat log when at full hit points.</li>
+        </ul>
+      </div>
+      <div class="engineering">
+        <h3>Engineering:</h3>
+        <ul>
+          <li>There is a new UI element that shows you your Tumble charges! This UI can be hidden in the options menu under "Show Tumble UI." Each green pip represents one tumble charge. The previous tumble visuals on your character have been removed. You can drag the UI element around, and it'll stay where you leave it.</li>
+          <li>Antirequisites now display on enhancements more intelligently.
+            <ul>
+              <li>Added a title for Antireq chains to avoid repeated text (single-antireq enhancements will continue to display them on one line)</li>
+              <li>Differently formatted bullet points to link antireq chains together</li>
+              <li>Displaying the class the enhancement is from in an abbreviated form if it is a class-related enhancement</li>
+              <li>Displaying the race the enhancement is from if it is a race-related enhancement</li>
+              <li>(If neither class nor race related, this section is not displayed)</li>
+              <li>The list of antireqs no longer displays duplicate entries.</li>
+              <li>The list of antireqs no longer displays prereqs that are actually the enhancement you're hovering over in disguise.</li>
+              <li>The list of antireqs no longer displays unused and unimplemented enhancements.</li>
+              <li>And finally, renamed every single Efficient Metamagic enhancement so that the names all match up and look nice.</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U66">
       <div class="header">
         <h2>Update 66: Rise of the Dragon Lord</h2>
@@ -253,6 +315,20 @@
           <li>Carrion Swarm has had a visual bug fixed so you have a unique channel per originator.</li>
           <li>Fixed many small text errors and typos.</li>
           <li class="patch">Daunting Roar should no longer paralyze party members nor yourself.</li>
+          <li class="patch">Casting Energy Vortex: Negative no longer casts the Fire version instead.</li>
+          <li class="patch">Corrected a visual issue where feats that have higher tier versions would mistakenly claim that you lacked the required base feat.</li>
+          <li class="patch">Machrotechnic Tonquin's Hammer should now deal damage as expected.</li>
+          <li class="patch">Shiradi Champion's Fey Presence now has its proper minimum level.</li>
+          <li class="patch">Harm is no longer blocked by friendly spell absorption for healing Undead.</li>
+          <li class="patch">Weathering the Elements in Primal Avatar now has a clearer tooltip.</li>
+          <li class="patch">Corrected a tooltip error in Queen's Diplomacy.</li>
+          <li class="patch">Several abilities in Unyielding Sentinel now allow movement during their activation.</li>
+          <li class="patch">Fixed tooltip of Shadows Among You to clarify its debuff.</li>
+          <li class="patch">Angelic Form now properly sticks in your buff bar.</li>
+          <li class="patch">Fixed negative threat and tooltip for Queen's Countentance in Shiradi.</li>
+          <li class="patch">Fixed the minimum level of Great Summoner to be 20 in Magus.</li>
+          <li class="patch">Fixed the tooltips for Scorch and Obscuring Darkness in the Tiefling tree to have accurate SLA information.</li>
+          <li class="patch">Grandmaster of Flowers' Orchid Blossom now properly scales with higher of Melee or Ranged Power rather than Force Spell Power. </li>
         </ul>
       </div>
       <div class="engineering">
