--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
           <li>Knight of the Chalice's Divine Sacrifice (Ranged) now has its proper tooltip between ranks.</li>
           <li>Throwing weapons now correctly calculate their to-hit if using alternate stats like Intelligence or Charisma.</li>
           <li>Legendary Greensteel accessory healing effects no longer continuously spam the combat log when at full hit points.</li>
+          <li class="patch">Fixed an issue that prevented VIPs from getting Dragon Lord properly unlocked with their subscription.</li>
+          <li class="patch">Corrected an issue where Rohine would not properly bestow the quest "Litany of the Dead".</li>
+          <li class="patch">Heroic Zawabi's Revenge now has its intended Raid rune drops</li>
+		  <li class="patch">Fixed a typo in Darling's rat form tooltip</li>
+		  <li class="patch">Icy Prison should now properly freeze targets</li>
         </ul>
       </div>
       <div class="engineering">
@@ -127,6 +132,8 @@
               <li>And finally, renamed every single Efficient Metamagic enhancement so that the names all match up and look nice.</li>
             </ul>
           </li>
+		  <li class="patch">Quest selection UI within LFM creation now displays and allows for sorting by Heroic and Epic level and if the quest is a Raid or not.</li>
+          <li class="patch">Hovering over a quest entry in the LFM creation window and Adventure Compendium now displays both the Heroic/Epic/Legendary level and the location where the quest can be found.</li>
         </ul>
       </div>
     </div>
