adding fake MMO page to main page links

--- a/DDO.html
+++ b/DDO.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="main.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-  <meta property="og:url" content="https://rienuaa.github.io/Portfolio/">
+  <meta property="og:url" content="https://rienuaa.github.io/Portfolio/DDO.html">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Quentin's DDO Contributions">
   <meta property="og:site_name" content="Quentin's DDO Contributions">
@@ -39,7 +39,7 @@
   <div id="header">
     <h1>My Contributions to Dungeons and Dragons: Online</h1>
     <p>I worked on DDO from 2016-2024. Everything listed here is a patch note for which I was directly responsible. If you'd like to see some analysis of my body of work, I've provided some statistics under the "Show Stats" button in the control panel. <br><span class="patch">List items in blue were added in a subsequent patch.</span></p>
-    <p><a href="index.html">Back to main portfolio.</a></p>
+    <p><a href="index.html" style="text-decoration: underline; color: blue;">Return to Portfolio.</a></p>
   </div>
   <div id="GraphSection" style="display:none;">
     <hr>
