--- a/index.html
+++ b/index.html
@@ -21,17 +21,35 @@
 
   <hr>
 
-  <div id="DDO">
-    <div class="row">
-      <div class="column1">
-        <img src="DDOLogo.png" style="width: 200px;">
-      </div>
-      <div class="column2">
-        <h2>Dungeons and Dragons: Online</h2>
-        <p>My work on DDO! I've organized this into patch notes. <a href="DDO.html">Check it out!</a></p>
+  <a href="DDO.html">
+    <div class="DDO">
+      <div class="row">
+        <div class="column1">
+          <img src="DDOLogo.png" style="width: 200px;">
+        </div>
+        <div class="column2">
+          <h2>Dungeons and Dragons: Online</h2>
+          <p>My work on DDO! I've organized this into patch notes.</p>
+        </div>
       </div>
     </div>
-    
-  </div>
+  </a>
+
+  <hr>
+
+  <a href="FakeMMO.html">
+    <div id="FakeMMO">
+      <div class="row">
+        <div class="column1">
+          <img src="FakeMMO.png" style="width: 200px;">
+        </div>
+        <div class="column2">
+          <h2>Codename: Fake MMO</h2>
+          <p>Something I've been cooking up in my spare time: an indie solo project meant to simulate a MMORPG as a single-player experience.</p>
+          <p>Includes a playable demo!</p>
+        </div>
+      </div>
+    </div>
+  </a>
 </body>
 </html>
