adding netgarden to portfolio

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
   <div id="header" >
-    <h1 style="font-size: xx-large;">Hi, I'm Quentin Cantor!</h1>
-    <p>I am an experienced Game Systems Designer, with AAA RPG and Live Service experience. This is my portfolio!</p>
+    <h1 style="font-size: xx-large; text-align: center;">Hi, I'm Quentin Cantor!</h1>
+    <p style="text-align: center;">I am an experienced Game Systems Designer, with AAA RPG and Live Service experience. This is my portfolio!</p>
+    <p style="text-align: center;"><a href="QCantor Resume.pdf" style="text-decoration: underline; color: blue;">My Resume</a> - <a href="https://www.linkedin.com/in/quentin-cantor-938b14123/" style="text-decoration: underline; color: blue;">My LinkedIn</a></p>
   </div>
 
   <hr>
@@ -46,6 +47,23 @@
         <div class="column2">
           <h2>Codename: Fake MMO</h2>
           <p>Something I've been cooking up in my spare time: an indie solo project meant to simulate a MMORPG as a single-player experience.</p>
+          <p>Includes a playable demo!</p>
+        </div>
+      </div>
+    </div>
+  </a>
+
+  <hr>
+
+  <a href="webgarden.html">
+    <div id="WEBGARDEN">
+      <div class="row">
+        <div class="column1">
+          <img src="webgarden.png" style="width: 200px;">
+        </div>
+        <div class="column2">
+          <h2>Codename: WEBGARDEN</h2>
+          <p>An online game meant to bring people together. Features Mirror Networking and the Steam API.</p>
           <p>Includes a playable demo!</p>
         </div>
       </div>
