adding substack link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="header" >
     <h1 style="font-size: xx-large; text-align: center;">Hi, I'm Quentin Cantor!</h1>
     <p style="text-align: center;">I am an experienced Game Systems Designer, with AAA RPG and Live Service experience. This is my portfolio!</p>
-    <p style="text-align: center;"><a href="QCantor Resume.pdf" style="text-decoration: underline; color: blue;">My Resume</a> - <a href="https://www.linkedin.com/in/quentin-cantor-938b14123/" style="text-decoration: underline; color: blue;">My LinkedIn</a></p>
+    <p style="text-align: center;"><a href="QCantor Resume.pdf" style="text-decoration: underline; color: blue;">My Resume</a> - <a href="https://www.linkedin.com/in/quentin-cantor-938b14123/" style="text-decoration: underline; color: blue;">My LinkedIn</a> - <a href="https://quentincantor.substack.com/" style="text-decoration: underline; color: blue;">My Substack</a></p>
   </div>
 
   <hr>
