--- a/Unreal/Unreal.html
+++ b/Unreal/Unreal.html
@@ -27,10 +27,10 @@
 
   <div class="row">
     <div class="column1">
-      <img src="1.png" style="width: 500px;">
+      <img src="1.png" style="max-width: 800px; height: auto;">
     </div>
     <div class="column2">
-      <img src="2.png" style="width: 500px;">
+      <img src="2.png" style="max-width: 800px; height: auto;">
     </div>
   </div>
 
@@ -38,10 +38,10 @@
 
   <div class="row">
     <div class="column1">
-      <img src="3.png" style="width: 500px;">
+      <img src="3.png" style="width: 800px;">
     </div>
     <div class="column2">
-      <img src="4.png" style="width: 500px;">
+      <img src="4.png" style="width: 800px;">
     </div>
   </div>
 
@@ -49,10 +49,10 @@
 
   <div class="row">
     <div class="column1">
-      <img src="5.png" style="width: 500px;">
+      <img src="5.png" style="width: 800px;">
     </div>
     <div class="column2">
-      <img src="6.png" style="width: 500px;">
+      <img src="6.png" style="width: 800px;">
     </div>
   </div>
 
@@ -60,10 +60,10 @@
 
   <div class="row">
     <div class="column1">
-      <img src="7.png" style="width: 500px;">
+      <img src="7.png" style="width: 800px;">
     </div>
     <div class="column2">
-      <img src="8.png" style="width: 500px;">
+      <img src="8.png" style="width: 800px;">
     </div>
   </div>
 
@@ -71,10 +71,10 @@
 
   <div class="row">
     <div class="column1">
-      <img src="9.png" style="width: 500px;">
+      <img src="9.png" style="width: 800px;">
     </div>
     <div class="column2">
-      <img src="10.png" style="width: 500px;">
+      <img src="10.png" style="width: 800px;">
     </div>
   </div>
 
