updating portfolio for playable demo update 0.8

--- a/FakeMMO/FakeMMO.html
+++ b/FakeMMO/FakeMMO.html
@@ -29,27 +29,27 @@
   <div class="MMO Sim">
     <div class="row">
       <div class="column1">
-        <img src="MMOSim.png" style="width: 200px;">
+        <a href = "MMOSimulation.png"><img src="MMOSimulation.png"></a>
       </div>
       <div class="column2">
         <h2>Simulated Multiplayer</h2>
         <p>Other "players" will join you in adventuring - they will navigate and participate in questing and combat.</p>
-        <p>You can check how many players are in the world, and what they're doing, by checking the Simulation Stats in the debug window.</p>
+        <p>They have their own stats, gear, and enhancements, and will participate in active combat with you!</p>
       </div>
     </div>
   </div>
 
   <hr>
 
-  <div class="Card Combat">
+  <div class="Active Combat">
     <div class="row">
       <div class="column1">
-        <img src="CardLibrary.png" style="width: 200px;">
+        <a href = "ActiveCombat.png"><img src="ActiveCombat.png"></a>
       </div>
       <div class="column2">
-        <h2>Card Combat</h2>
-        <p>Combat within this game takes the form of card battles. Walk up to an enemy to enter combat, and try to defeat them before they can defeat you!</p>
-        <p>Your starting library is determined by your choices in character creation. Upgrade cards at crafting tables, or unlock new ones in stores.</p>
+        <h2>Active Combat</h2>
+        <p>Combat within this game is active - no hotbar, just click your mouse to attack. Every weapon type and combination has different animations.</p>
+        <p>Enemies have different stats and attack patterns, and will wander their spawned locations automatically.</p>
       </div>
     </div>
   </div>
@@ -59,12 +59,12 @@
   <div class="Advancement">
     <div class="row">
       <div class="column1">
-        <img src="Enhancements.png" style="width: 200px;">
+        <a href = Enhancements.png><img src="Enhancements.png"></a>
       </div>
       <div class="column2">
         <h2>Advancement and Progression</h2>
         <p>As you level up, you'll earn Enhancement Points, to be spent within your Enhancement Trees.</p>
-        <p>Unlock new trees by unlocking achievements or by speaking to certain NPCs.</p>
+        <p>Enhancements can radically change your character's build. </p>
       </div>
     </div>
   </div>
@@ -74,12 +74,27 @@
   <div class="Hoverboards">
     <div class="row">
       <div class="column1">
-        <img src="FakeMMO.png" style="width: 200px;">
+        <a href="Hoverboard.png"><img src="Hoverboard.png"></a>
       </div>
       <div class="column2">
         <h2>Hoverboarding</h2>
         <p>Inspired by Wildstar! Hoverboards are a great way to get around.</p>
-        <a href="https://www.youtube.com/watch?v=p2raViTI-3g" style="text-decoration: underline; color: blue;"><p>Check out this hoverboard test footage!</p></a>
+        <a href="https://www.youtube.com/watch?v=p2raViTI-3g" style="text-decoration: underline; color: blue;"><p>Check out this hoverboard test footage from early in development!</p></a>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="Character">
+    <div class="row">
+      <div class="column1">
+        <a href = MapExploration.png><img src="MapExploration.png"></a>
+      </div>
+      <div class="column2">
+        <h2>Character Appearance Modification</h2>
+        <p>Character appearance can be customized during character creation, and gear changes the appearance of your character once equipped.</p>
+        <p>This demo supports 47 different pieces of equippable gear, not including 12 different weapons to master.</p>
       </div>
     </div>
   </div>
@@ -89,7 +104,7 @@
   <div class="Achievements">
     <div class="row">
       <div class="column1">
-        <img src="Achievements.png" style="width: 200px;">
+        <a href="Achievements.png"><img src="Achievements.png"></a>
       </div>
       <div class="column2">
         <h2>Achievements</h2>
@@ -101,17 +116,34 @@
 
   <hr>
 
-  <h3>Other Features Include...</h3>
+  <div class="World Map">
+    <div class="row">
+      <div class="column1">
+        <a href="FullMap.png"><img src="FullMap.png"></a>
+      </div>
+      <div class="column2">
+        <h2>Map Exploration</h2>
+        <p>As you explore, you'll encounter Waypoints, Points of Interest, and Area Objectives, which will award you with XP.</p>
+        <p>Completing the entire map will take you through 6 distinct biomes - a green forest, a golden meadow, an enchanted glade, a dark castle, a bustling down, and an underground volcano, each with their own enemies and exploration points.</p>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <h3>Full Features Include...</h3>
   <ul>
     <li>Locomotion animations for players and NPC players</li>
     <li>Keymapping using Unity Player Prefs</li>
     <li>JSON serialization based saving and loading of Scriptable Objects within player save data</li>
-    <li>Automatic map generation based on terrain splatmaps and heights</li>
+    <li>Automatic map image generation based on terrain splatmaps and heights</li>
     <li>Automatic map notes that update their positions and rotations dynamically</li>
     <li>Guild Wars 2 inspired Area Objective based questing</li>
     <li>Guild Wars 2 inspired Map Completion objectives and rewards</li>
     <li>Custom enemy AI and idle wander behaviors</li>
-    <li>Itemization and equipment</li>
+    <li>Itemization and equipment with visuals</li>
+    <li>Two visually distinct playable races</li>
+    <li>Two backgrounds, each with their own unique enhancements</li>
     <li>Gold and custom currency rewards for detailed trading</li>
     <li>Game settings such as hiding the UI and setting the game to Full Screen</li>
   </ul>
