--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="FakeMMO">
       <div class="row">
         <div class="column1">
-          <img src="FakeMMO/FakeMMO.png" style="width: 200px;">
+          <img src="FakeMMO/ActiveCombat.png" style="width: 200px;">
         </div>
         <div class="column2">
           <h2>Codename: Fake MMO</h2>
