--- a/webgarden/webgarden.html
+++ b/webgarden/webgarden.html
@@ -29,7 +29,7 @@
   <div>
     <div class="row">
       <div class="column1">
-        <img src="Animals.png" style="width: 200px;">
+        <img src="Animals.png">
       </div>
       <div class="column2">
         <h2>Online Gameplay</h2>
@@ -44,7 +44,7 @@
   <div>
     <div class="row">
       <div class="column1">
-        <img src="Lobbies.png" style="width: 200px;">
+        <img src="Lobbies.png">
       </div>
       <div class="column2">
         <h2>Seamless In-Client Session Joining</h2>
@@ -59,7 +59,7 @@
   <div>
     <div class="row">
       <div class="column1">
-        <img src="Chat.png" style="width: 200px;">
+        <img src="Chat.png">
       </div>
       <div class="column2">
         <h2>Chat & Explore!</h2>
@@ -74,8 +74,8 @@
   <div>
     <div class="row">
       <div class="column1">
-        <img src="Island.png" style="width: 200px;">
-        <img src="Shader.png" style="width: 200px;">
+        <img src="Island.png">
+        <img src="Shader.png">
       </div>
       <div class="column2">
         <h2>Custom Terrain Shader</h2>
