--- a/Unreal/Unreal.html
+++ b/Unreal/Unreal.html
@@ -27,10 +27,10 @@
 
   <div class="row">
     <div class="column1">
-      <img src="1.png" style="max-width: 800px; height: auto;">
+      <img src="1.png" style="width: 800px;">
     </div>
     <div class="column2">
-      <img src="2.png" style="max-width: 800px; height: auto;">
+      <img src="2.png" style="width: 800px;">
     </div>
   </div>
 
