--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="column2">
           <h2>Codename: Fake MMO</h2>
-          <p>Something I've been cooking up in my spare time: an indie solo project meant to simulate a MMORPG as a single-player experience.</p>
+          <p>Something I've been cooking up in Unity in my spare time: an indie solo project meant to simulate a MMORPG as a single-player experience.</p>
           <p>Includes a playable demo!</p>
         </div>
       </div>
