added my GW2 stuff
also updated some text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         </div>
         <div class="column2">
           <h2>Unannounced RPG</h2>
-          <p>An unannounced AAA RPG using Unreal Engine.</p>
+          <p>An unannounced AAA RPG built using Unreal Engine.</p>
+          <p>I was a Senior Systems Designer on this project, and also contributed to some level design.</p>
         </div>
       </div>
     </div>
@@ -81,6 +82,24 @@
           <h2>Codename: WEBGARDEN</h2>
           <p>An online game meant to bring people together. Features Mirror Networking and the Steam API.</p>
           <p>Includes a playable demo!</p>
+        </div>
+      </div>
+    </div>
+  </a>
+
+  <hr>
+
+  <a href="https://rienuaa.github.io/Achievements/">
+    <div id="GW2">
+      <div class="row">
+        <div class="column1">
+          <img src="GW2/gw2_logo.jpg" style="width: 200px;">
+        </div>
+        <div class="column2">
+          <h2>Guild Wars 2 Achievement Tracker</h2>
+          <p>A GW2 REST API endpoint, featuring fun graphs and statistical analysis.</p>
+          <p>Tracks achievement progress, dye progress, legendaries, fractals, and more!</p>
+          <p>Requires a valid GW2 API key to view. If you need to borrow mine, let me know!</p>
         </div>
       </div>
     </div>
